<resources>
    <string name="app_name">android</string>

    <string name="welcome_str_eng">Welcome to RenjuLand!</string>
    <string name="welcome_str_rus">Добро пожаловать в Рендзю онлайн!</string>
    <string name="registration_text">Зарегистрируйтесь, чтобы начать</string>
    <string name="login_name_str">login</string>
    <string name="reg_email_str">e-mail</string>
    <string name="reg_password_str">password</string>
    <string name="reg_repeat_password_str">repeat password</string>
    <string name="reg_button_str">Зарегистрироваться</string>
    <string name="reg_to_log_str">У вас уже есть аккаунт?</string>
    <string name="log_in_str">Войти</string>
    <string name="log_to_reg_str">Вы ещё не зарегестрированы?</string>
    <string name="reg_with_str">Зарегистрироваться через</string>
    <string name="choose_reg_str">Выберите способ регистрации</string>

    <string name="username">Player1</string>
    <string name="rating">Рейтинг: 0</string>
    <string name="play">Играть</string>
    <string name="history_str">История игр</string>
    <string name="result_str">Результат</string>
    <string name="rank_str">Рейтинг</string>
    <string name="players_rating">Общий рейтинг игроков</string>
    <string name="players_login">Логин</string>
    <string name="log_text">Логин</string>

    <string name="new_game_str">Чтобы начать игру, введите имя игрока:</string>
    <string name="unfinished_game_str">У вас незаконченная игра с пользователем</string>
    <string name="invite_str">Пригласить</string>
    <string name="table_invite_str">Список приглашений</string>
    <string name="time_str">5 мин. н.</string>
    <string name="invite_mess_str">Игрок user приглашает вас в игру!</string>
    <string name="cont_str">Продолжить</string>
    <string name="finish_str">Завершить</string>
    <string name="accept_str">Принять</string>
    <string name="refuse_str">Отказаться</string>
    <string name="surrender_str">Сдаться</string>

    <string name="game_player_str">(Вы)</string>
    <string name="username2">Player2</string>
    <string name="vs_str">vs</string>
    <string name="inf_step_str">Информация о ходах</string>

    <string name="err_auth_empty">Заполните оба поля, а затем повторите попытку</string>
    <string name="err_reg_empty">Вы заполнили не все поля</string>
    <string name="err_reg_msg">Вы не заполнили поле </string>
    <string name="err_reg_pass">Пароли не совпадают</string>

    <string name="black_user">Чёрная сторона</string>
    <string name="white_user">Белая сторона</string>
    <string name="winner">Победитель</string>

    <string name="find_users_str">Результаты поиска</string>
    <string name="find_str">Найти</string>
    <string name="refuse_game_str">Ваше приглашение не принято или время истекло</string>

    <string name="err423">Первый ход должны делать черные</string>
    <string name="err424">Первый ход должен быть в центр доски</string>
    <string name="err425">Координаты выходят за пределы доски</string>
    <string name="err426">Поле уже занято</string>
    <string name="err427">Не ваш ход</string>
    <string name="black_move">Ход чёрных</string>
    <string name="white_move">Ход белый</string>

    <string name="decline">отказался от игры</string>
    <string name="draw">Игра закончилась без победителя (ничья)</string>
    <string name="win">Игра закончилась с победителем</string>
    <string name="no_win">Партия не состоялась</string>
</resources>