<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reg_welcome_eng_text"
        style="@style/InfoText"
        android:text="@string/welcome_str_eng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/reg_welcome_rus_text"
        style="@style/InfoText"
        android:textSize="16sp"
        android:text="@string/welcome_str_rus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_welcome_eng_text" />


    <TextView
        android:id="@+id/reg_text"
        style="@style/StandardText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/border"
        android:paddingTop="20dp"
        android:text="@string/registration_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_welcome_rus_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_login_layout"
        style="@style/TextInputLayoutDesign"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/reg_text"
        app:layout_constraintStart_toStartOf="@+id/reg_text"
        app:layout_constraintTop_toTopOf="@+id/reg_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_login_field"
            style="@style/TextInputFieldDesign"
            android:hint="@string/login_name_str"
            android:inputType="textPersonName"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_reg_layout" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email_layout"
        style="@style/TextInputLayoutDesign"
        app:layout_constraintEnd_toEndOf="@+id/reg_text"
        app:layout_constraintStart_toStartOf="@+id/reg_text"
        app:layout_constraintTop_toBottomOf="@+id/reg_login_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email_field"
            style="@style/TextInputFieldDesign"
            android:hint="@string/reg_email_str"
            android:inputType="textEmailAddress"
            android:maxLength="255"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_reg_layout" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password_layout"
        style="@style/TextInputLayoutDesign"
        app:counterOverflowTextColor="@color/colorError"
        app:layout_constraintEnd_toEndOf="@+id/reg_text"
        app:layout_constraintStart_toStartOf="@+id/reg_text"
        app:layout_constraintTop_toBottomOf="@+id/reg_email_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_password_field"
            style="@style/TextInputFieldDesign"
            android:hint="@string/reg_password_str"
            android:inputType="textPassword"
            android:maxLength="32"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_repeat_password_layout"
        style="@style/TextInputLayoutDesign"
        app:counterOverflowTextColor="@color/colorError"
        app:layout_constraintEnd_toEndOf="@+id/reg_text"
        app:layout_constraintStart_toStartOf="@+id/reg_text"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_repeat_password_field"
            style="@style/TextInputFieldDesign"
            android:hint="@string/reg_repeat_password_str"
            android:inputType="textPassword"
            android:maxLength="32"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_to_profile_button"
        style="@style/YellowButtonDesign"
        android:text="@string/reg_button_str"
        app:layout_constraintEnd_toEndOf="@+id/reg_to_auth_text"
        app:layout_constraintStart_toStartOf="@+id/reg_to_auth_text"
        app:layout_constraintTop_toBottomOf="@+id/reg_repeat_password_layout" />


    <TextView
        android:id="@+id/reg_to_auth_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/StandardText"
        android:layout_marginTop="20dp"
        android:text="@string/reg_to_log_str"
        app:layout_constraintEnd_toEndOf="@+id/reg_text"
        app:layout_constraintStart_toStartOf="@+id/reg_text"
        app:layout_constraintTop_toBottomOf="@+id/reg_to_profile_button" />

    <Button
        android:id="@+id/reg_to_auth_button"
        style="@style/YellowButtonDesign"
        android:text="@string/log_in_str"
        app:layout_constraintEnd_toEndOf="@+id/reg_to_auth_text"
        app:layout_constraintStart_toStartOf="@+id/reg_to_auth_text"
        app:layout_constraintTop_toBottomOf="@+id/reg_to_auth_text" />
</androidx.constraintlayout.widget.ConstraintLayout>