<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/choose_welcome_eng_text"
        style="@style/InfoText"
        android:text="@string/welcome_str_eng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/choose_welcome_rus_text"
        style="@style/InfoText"
        android:textSize="16sp"
        android:text="@string/welcome_str_rus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_welcome_eng_text" />


    <TextView
        android:id="@+id/choose_text"
        style="@style/StandardText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/border"
        android:paddingTop="20dp"
        android:text="@string/choose_reg_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_welcome_rus_text"/>


    <Button
        android:id="@+id/choose_to_reg_button"
        style="@style/YellowButtonDesign"
        android:text="@string/reg_button_str"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/choose_text"
        app:layout_constraintStart_toStartOf="@+id/choose_text"
        app:layout_constraintTop_toTopOf="@+id/choose_text" />

    <TextView
        android:id="@+id/choose_reg_with_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/StandardText"
        android:layout_marginTop="20dp"
        android:text="@string/reg_with_str"
        app:layout_constraintEnd_toEndOf="@+id/choose_text"
        app:layout_constraintStart_toStartOf="@+id/choose_text"
        app:layout_constraintTop_toBottomOf="@+id/choose_to_reg_button" />

    <ImageButton
        android:id="@+id/choose_google_button"
        style="@style/PlatformImageButton"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="@+id/choose_text"
        app:layout_constraintTop_toBottomOf="@+id/choose_reg_with_text"
        android:background="@drawable/enter_google_shape" />

    <ImageButton
        android:id="@+id/choose_vk_button"
        style="@style/PlatformImageButton"
        app:layout_constraintEnd_toStartOf="@+id/choose_yandex_button"
        app:layout_constraintStart_toEndOf="@+id/choose_google_button"
        app:layout_constraintTop_toBottomOf="@+id/choose_reg_with_text"
        android:background="@drawable/enter_vk_shape"
        />

    <ImageButton
        android:id="@+id/choose_yandex_button"
        style="@style/PlatformImageButton"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/enter_yandex_shape"
        app:layout_constraintEnd_toEndOf="@+id/choose_text"
        app:layout_constraintTop_toBottomOf="@+id/choose_reg_with_text"
        />

    <TextView
        android:id="@+id/choose_to_auth_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/StandardText"
        android:layout_marginTop="20dp"
        android:text="@string/reg_to_log_str"
        app:layout_constraintEnd_toEndOf="@+id/choose_text"
        app:layout_constraintStart_toStartOf="@+id/choose_text"
        app:layout_constraintTop_toBottomOf="@+id/choose_vk_button" />

    <Button
        android:id="@+id/choose_to_auth_button"
        style="@style/YellowButtonDesign"
        android:text="@string/log_in_str"
        app:layout_constraintEnd_toEndOf="@+id/choose_to_auth_text"
        app:layout_constraintStart_toStartOf="@+id/choose_to_auth_text"
        app:layout_constraintTop_toBottomOf="@+id/choose_to_auth_text" />
</androidx.constraintlayout.widget.ConstraintLayout>