<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/auth_welcome_eng_text"
        style="@style/InfoText"
        android:text="@string/welcome_str_eng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/auth_welcome_rus_text"
        style="@style/InfoText"
        android:textSize="16sp"
        android:text="@string/welcome_str_rus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_welcome_eng_text" />


    <TextView
        android:id="@+id/auth_text"
        style="@style/StandardText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:paddingTop="20dp"
        android:background="@drawable/border"
        android:text="@string/log_in_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_welcome_rus_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auth_login_layout"
        style="@style/TextInputLayoutDesign"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/auth_text"
        app:layout_constraintStart_toStartOf="@+id/auth_text"
        app:layout_constraintTop_toTopOf="@+id/auth_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_login_field"
            style="@style/TextInputFieldDesign"
            android:hint="@string/login_name_str"
            android:inputType="textPersonName"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_reg_layout" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auth_password_layout"
        style="@style/TextInputLayoutDesign"
        app:counterOverflowTextColor="@color/colorError"
        app:layout_constraintEnd_toEndOf="@+id/auth_text"
        app:layout_constraintStart_toStartOf="@+id/auth_text"
        app:layout_constraintTop_toBottomOf="@+id/auth_login_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_password_field"
            style="@style/TextInputFieldDesign"
            android:hint="@string/reg_password_str"
            android:inputType="textPassword"
            android:maxLength="32" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/auth_to_profile_button"
        style="@style/YellowButtonDesign"
        android:text="@string/log_in_str"
        app:layout_constraintEnd_toEndOf="@+id/auth_text"
        app:layout_constraintStart_toStartOf="@+id/auth_text"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_layout"/>


    <ImageButton
        android:id="@+id/auth_google_button"
        style="@style/PlatformImageButton"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="@+id/auth_text"
        app:layout_constraintTop_toBottomOf="@+id/auth_to_profile_button"
        android:background="@drawable/enter_google_shape" />

    <ImageButton
        android:id="@+id/auth_vk_button"
        style="@style/PlatformImageButton"
        app:layout_constraintEnd_toStartOf="@+id/auth_yandex_button"
        app:layout_constraintStart_toEndOf="@+id/auth_google_button"
        app:layout_constraintTop_toBottomOf="@+id/auth_to_profile_button"
        android:background="@drawable/enter_vk_shape"
        />

    <ImageButton
        android:id="@+id/auth_yandex_button"
        style="@style/PlatformImageButton"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/enter_yandex_shape"
        app:layout_constraintEnd_toEndOf="@+id/auth_text"
        app:layout_constraintTop_toBottomOf="@+id/auth_to_profile_button"
        />

    <TextView
        android:id="@+id/auth_offer_to_register_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/StandardText"
        android:layout_marginTop="30dp"
        android:text="@string/log_to_reg_str"
        app:layout_constraintEnd_toEndOf="@+id/auth_text"
        app:layout_constraintStart_toStartOf="@+id/auth_text"
        app:layout_constraintTop_toBottomOf="@+id/auth_vk_button" />

    <Button
        android:id="@+id/auth_to_choose_button"
        style="@style/YellowButtonDesign"
        android:text="@string/reg_button_str"
        app:layout_constraintEnd_toEndOf="@+id/auth_offer_to_register_text"
        app:layout_constraintStart_toStartOf="@+id/auth_offer_to_register_text"
        app:layout_constraintTop_toBottomOf="@+id/auth_offer_to_register_text" />
</androidx.constraintlayout.widget.ConstraintLayout>