<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:backgroundTint="#00F8F8F8"
    android:elevation="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/invite_for_recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/invite_shape">

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/time_str"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/auth_welcome_eng_text"
            style="@style/InfoText"
            android:gravity="start"
            android:text="@string/invite_mess_str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text" />

        <Button
            android:id="@+id/accept_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_str"
            android:layout_marginVertical="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/invite_shape"
            android:textAllCaps="false"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toStartOf="@+id/refuse_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_welcome_eng_text" />

        <Button
            android:id="@+id/refuse_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/refuse_str"
            android:layout_marginVertical="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/invite_shape_red"
            android:textAllCaps="false"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/accept_button"
            app:layout_constraintTop_toBottomOf="@+id/auth_welcome_eng_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>