<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/start_game_place"
        style="@style/Place"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_new_gem_text"
        style="@style/StandardText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:elevation="2dp"
        android:text="@string/new_game_str"
        app:layout_constraintEnd_toEndOf="@+id/start_game_place"
        app:layout_constraintStart_toStartOf="@+id/start_game_place"
        app:layout_constraintTop_toTopOf="@+id/start_game_place" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/start_login_layout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toStartOf="@+id/invite_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_new_gem_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_login_field"
            style="@style/TextInputFieldDesign"
            android:background="@drawable/emblema_button_shape"
            android:hint="@string/login_name_str"
            android:inputType="textPersonName"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/invite_button"
        style="@style/YellowButtonDesign"
        android:layout_width="150dp"
        android:text="@string/invite_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_login_layout"
        app:layout_constraintTop_toBottomOf="@+id/start_new_gem_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start_unfinished_game"
        style="@style/Place"
        android:visibility="gone"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game_place">

        <TextView
            android:id="@+id/start_unfinished_game_text"
            style="@style/StandardText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:elevation="2dp"
            android:text="@string/unfinished_game_str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_accept_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/invite_shape"
            android:text="@string/cont_str"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_unfinished_game_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/start_invite_mess"
        style="@style/InfoText"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="5dp"
        android:height="30dp"
        android:background="@drawable/table_shape"
        android:gravity="center_horizontal"
        android:text="@string/table_invite_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_unfinished_game" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/start_invite_recycler"
        android:layout_width="0dp"
        android:layout_height="390dp"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/table_bottom_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_invite_mess"
        tools:listitem="@layout/invite_elem_recycle" />


</androidx.constraintlayout.widget.ConstraintLayout>